--- a/Front/android/app/src/main/res/values/colors.xml
+++ b/Front/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#ffffff</color>
+  <color name="splashscreen_background">#F05454</color>
   <color name="iconBackground">#ffffff</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#ffffff</color>
+  <color name="colorPrimaryDark">#F05454</color>
 </resources>
